--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
 
   # Utilities
   uuid: ^4.2.1
+
+  # Analytics (optional - for custom event tracking)
+  web: ^1.0.0
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
