--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "showboard_quoting_app",
-    "short_name": "showboard_quoting_app",
+    "name": "Photomotive Group Quotes",
+    "short_name": "Photomotive",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#DC2626",
+    "theme_color": "#DC2626",
+    "description": "Professional Car Photography Quote Generator for Photomotive Group Services - Capturing High-Quality, Unique Car Images for Car Shows & Collections",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
